# NuclearDataModels

./: .gitignore  CMakeLists.txt  README.md  TODO.md  api_showcase_demo.py  clean_api_demo.py  create_demo_plot.py  setup.py
bindings/python/RMatrix/: CMakeLists.txt  bindings.cpp
bindings/python/Thermal/: CMakeLists.txt  bindings.cpp
cpp/: CMakeLists.txt  pybind_wrapper.cpp
cpp/include/: Channel.h  CollisionMatrix.h  CompoundSystem.h  RMatrix.h  SpinGroup.h
cpp/src/: CrossSectionCalculator.cpp  Mlbw.cpp  RMatrix.cpp  pybind_wrapper.cpp
include/RMatrix/: Channel.h  CompoundSystem.h  CrossSectionCalculator.h  FormalismParameters.h  LevelMatrix.h  Mlbw.h  ParameterSensitivity.h  ParticlePair.h  RadialWaveFunctions.h  SpinGroup.h  XMatrix.h
include/Thermal/: ThermalScattering.h
notebooks/: debug_output.txt  leapr_hinh2o.txt  ln_T1_debug.txt  scattering_law_dict.pkl  tsl2.ipynb
notebooks/RMatrix/: resonan_from_endfTK.ipynb  resonan_from_endfTK_LRF7.ipynb  sensitivity.ipynb
notebooks/Thermal/: P_values.txt  T1_beta.txt  alpha_max.txt  tsl.ipynb  tsl_phonon_spectra.ipynb
notebooks_reso/: resonan_from_endfTK_LRF7.ipynb  resonance_from_tk.ipynb
python/pyrat/: formalisms.py  mlbw.py  resonance_data.py
script/: compoundFromENDFtk.py
scripts/: README.md  compoundFromENDFtk.py  plot_cross_sections.py
src/RMatrix/: CMakeLists.txt  Channel.cpp  CollisionMatrix.cpp  CrossSectionCalculator.cpp  LevelMatrix.cpp  ParameterSensitivity.cpp  RadialWaveFunctions.cpp  XMatrix.cpp
src/Thermal/: CMakeLists.txt  ThermalScattering.cpp
